--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -17,17 +17,19 @@
   &__person {
     margin-left: auto;
     margin-right: auto;
-    width: 450px;
+
+    width: 100%;
+    max-width: 450px;
     background-color: $hero-color;
     border: 0;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 1px 3px rgba(0, 0, 0, 0.12);
-  }
-//   &__person:not(:last-child) {
-//     margin-bottom: 30px;
-//   }
 
+    @media screen and(max-width:767px) {
+      width: 100%;
+    }
+  }
   &__name {
     color: $title-color;
     font-weight: 500;
@@ -46,9 +48,9 @@
   }
 }
 @include dq(only-phone) {
-    .team__person:not(:last-child) {
-        margin-bottom: 30px;}
-
+  .team__person:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 @include dq(only-tablet) {
   .team {
@@ -77,10 +79,8 @@
     margin-bottom: 0;
   }
   .team__person {
-    width: calc((100% - 4 * 30px) / 4);
+    width: calc((100% - 4 * $item-work-gap) / 4);
     margin: 15px;
-    max-width: 270px;  
+    max-width: 270px;
   }
- 
 }
-
