--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,7 +1,6 @@
 .primary-hero {
   text-align: center;
   background-color: $background-color-hero;
-  padding: 200px 0;
   width: 100%;
   height: 400px;
   max-width: $tablet;
@@ -12,6 +11,12 @@
   background-position: center;
   text-align: center;
   max-width: 1600px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  @include dq(desktop) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 
   // Mobile
   background-image: linear-gradient(
@@ -53,11 +58,7 @@
     }
   }
 
-  @media screen and(min-width: 768px) {
-    padding: 118px 189px;
-  }
-
-  // Desktop
+   // Desktop
   @media screen and (min-width: 769px) {
     background-image: linear-gradient(
         to right,
@@ -79,7 +80,7 @@
   }
 
   @media screen and(min-width: 1200px) {
-    padding: 200px;
+    // padding: 200px;
     height: 600px;
   }
 }
@@ -115,6 +116,7 @@
   letter-spacing: 0.06em;
   border-radius: 4px;
   @extend %transition;
+  margin-top: 30px;
 
   &:hover,
   &:focus {
