--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,8 +1,6 @@
-.nav {
+.main-nav {
   padding-left: 15px;
   padding-right: 15px;
-}
-.main-nav {
   display: flex;
   align-items: center;
   margin-left: auto;
@@ -92,7 +90,7 @@
     display: flex;
   }
   @include dq(only-tablet) {
-    margin-left: 114px;
+    margin-left: 93px;
   }
   &__item {
     display: flex;
@@ -110,11 +108,12 @@
       }
       @include dq(desktop) {
         margin-left: 40px;
-      }
+              }
     }
     @include dq(desktop) {
       align-items: center;
       justify-content: center;
+      font-size: 14px;
     }
   }
   &__icon {
