--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -73,6 +73,9 @@ transition-duration: 250ms;
   color: $color;
   font-family: $font-weblogo;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
+  @include dq(desktop) {
+    font-size: 26px;
+  }
 }
